style: :lipstick: fix contrast color text

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,9 +19,9 @@
   --input-border-radius: 4px;
   --font-mono: 'Fira Sans', sans-serif;
   --font-headers: 'Fira Sans', sans-serif;
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: 255, 255, 255;
   --background-color:#1b2e3c;
-  --input-color:#fff;
+  --input-color:#000;
   --color:#000 ;
   --font-weight:400;
   --transition: 0.2s ease-in-out;
